fixed admin alignment issues after WP 4.5 update

--- a/settings/templates/operators.css
+++ b/settings/templates/operators.css
@@ -4,12 +4,13 @@
   max-width: 100%;
   font-size: 15px;
 }
-.about-wrap h1 {
+.about-wrap h1, .about-wrap form h2 {
   margin: .2em 200px 0 0;
   color: #333;
   line-height: 1.2em;
-  font-size: 30px;
-  font-weight: bold;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-align: left;
 }
 .about-wrap .about-text {
   margin: 1em 200px 1em 0;
@@ -115,6 +116,9 @@ ul.operator-cards li .desc h2 {
   padding-left: 20px;
   font-size: 16px;
   text-transform: capitalize;
+  text-align: left;
+  font-weight: 600;
+  margin: 1em 0;
 }
 ul.operator-cards li .form-table{
   width:60%;
